Refactor: Separate configuration for LLM, Embeddings, and Reranker

--- a/.env.template
+++ b/.env.template
@@ -16,11 +16,20 @@ GRAPHITI_USE_SDK=true
 # Redis
 REDIS_URL=redis://redis:6379/0
 
-# OpenAI
-OPENAI_BASE_URL=https://api.openai.com/v1
-OPENAI_API_KEY=sk-REPLACE_WITH_YOUR_KEY
+# LLM
+LLM_BASE_URL=https://api.openai.com/v1
+LLM_API_KEY=sk-LLM_KEY_HERE
 LLM_MODEL=gpt-4o-mini
+
+# Embeddings
+EMBEDDING_BASE_URL=https://api.openai.com/v1
+EMBEDDING_API_KEY=sk-EMBEDDING_KEY_HERE
 EMBEDDING_MODEL=text-embedding-3-small
+
+# Reranker
+RERANKER_BASE_URL=https://api.openai.com/v1
+RERANKER_API_KEY=sk-RERANKER_KEY_HERE
+RERANKER_MODEL=reranker-001
 
 # Adapter
 ADAPTER_API_KEY=adapter-secret-api-key
