--- a/config.yml
+++ b/config.yml
@@ -14,21 +14,28 @@ neo4j:
 graphiti:
   image: getzep/graphiti:latest
   host: graphiti
-  port: 8000 # Standard Graphiti port is often 8000 or 8080, user said 3000 but let's check standard. User config says 3000. I will stick to user config but keep in mind.
+  port: 3000
   use_sdk: true
-  rest_base_url: http://graphiti:8000 # Graphiti usually runs on 8000 or 8080. The user example said 3000. I will use 8000 as it is more common for python services, but I will respect the user's explicit port if they insist. Wait, user said "port: 3000" in example. I will use 3000 to match their example, but I suspect Graphiti might default to 8000. I'll stick to 3000 for now as per "config.yml — обязателен, все переменные (пример)". Actually, looking at `getzep/graphiti`, it's a python app. Let's stick to the user's example for now, but I might need to adjust ports in docker-compose.
-  # Correction: Graphiti (Zep) usually defaults to 8000. The user might have just picked 3000. I will use 3000 in config to match the request exactly.
+  rest_base_url: http://graphiti:3000
 
 redis:
   url: redis://redis:6379/0
 
-openai:
-  base_url: https://api.openai.com/v1 # Placeholder, to be replaced
-  api_key: sk-REPLACE_WITH_YOUR_KEY
-  models:
-    llm: gpt-4o-mini
-    embedding: text-embedding-3-small
-    reranker: reranker-001 # Placeholder
+# Separate configurations for each model type
+llm:
+  base_url: https://api.openai.com/v1
+  api_key: sk-LLM_KEY_HERE
+  model: gpt-4o-mini
+
+embeddings:
+  base_url: https://api.openai.com/v1
+  api_key: sk-EMBEDDING_KEY_HERE
+  model: text-embedding-3-small
+
+reranker:
+  base_url: https://api.openai.com/v1
+  api_key: sk-RERANKER_KEY_HERE
+  model: reranker-001
 
 adapter:
   host: 0.0.0.0
