--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - neo4j_data:/data
       - ./neo4j/init:/var/lib/neo4j/import
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider localhost:7474 || exit 1"]
+      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider localhost:7474 || exit 1" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -20,14 +20,9 @@ services:
     image: ${GRAPHITI_IMAGE:-getzep/graphiti:latest}
     container_name: graphiti
     ports:
-      - "3000:8000" # Expose internal 8000 to host 3000 as per config
-    environment:
-      - NEO4J_URI=${NEO4J_URI}
-      - NEO4J_USER=${NEO4J_USER}
-      - NEO4J_PASSWORD=${NEO4J_PASSWORD}
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - OPENAI_BASE_URL=${OPENAI_BASE_URL}
-      - PORT=8000 # Graphiti internal port
+      - "3000:8000"
+    env_file:
+      - .env.graphiti
     depends_on:
       neo4j:
         condition: service_healthy
@@ -48,21 +43,17 @@ services:
       - "8000:8000"
     env_file:
       - .env.adapter
-    environment:
-      - REDIS_URL=${REDIS_URL}
-      - GRAPHITI_URL=${GRAPHITI_URL}
     depends_on:
       - redis
       - graphiti
 
   worker:
     build:
-      context: ./worker
+      context: .
+      dockerfile: worker/Dockerfile
     container_name: worker
     env_file:
       - .env.worker
-    environment:
-      - REDIS_URL=${REDIS_URL}
     depends_on:
       - redis
       - adapter
@@ -72,7 +63,7 @@ services:
       context: ./frontend
     container_name: frontend
     ports:
-      - "3000:80" # Nginx in frontend container serves on 80
+      - "3000:80"
     env_file:
       - ./frontend/.env
     depends_on:
