Fix: Add __init__.py files and set PYTHONPATH in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,7 @@ jobs:
         ADMIN_PASSWORD: password
       run: |
         cd backend/adapter
+        export PYTHONPATH=$PYTHONPATH:.
         python -m pytest
 
   build-docker:
