--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,4 +65,4 @@ jobs:
       run: docker build -f worker/Dockerfile -t graphiti-worker .
       
     - name: Build Frontend
-      run: docker build -t graphiti-frontend frontend
+      run: docker build -f frontend/Dockerfile -t graphiti-frontend .
