Refactor: Use Graphiti as Python library instead of separate container
- Remove graphiti service from docker-compose.yml
- Add graphiti-core to adapter and worker requirements
- Update config.yml to remove container-specific settings
- Rewrite graphiti_client.py to use SDK directly with Neo4j
- Remove .env.graphiti generation from scripts
- Update README architecture description

--- a/backend/adapter/requirements.txt
+++ b/backend/adapter/requirements.txt
@@ -9,7 +9,7 @@ redis==5.0.1
 rq==1.15.1
 prometheus-client==0.19.0
 neo4j==5.16.0
-# graphiti-core # If available, otherwise we use REST
+graphiti-core
 openai==1.10.0
 pytest==7.4.4
 pytest-asyncio==0.23.4
