--- a/backend/adapter/requirements.txt
+++ b/backend/adapter/requirements.txt
@@ -8,7 +8,7 @@ pyjwt==2.8.0
 redis==5.0.1
 rq==1.15.1
 prometheus-client==0.19.0
-neo4j==5.16.0
+neo4j>=5.26.0
 graphiti-core
 openai==1.10.0
 pytest==7.4.4
