--- a/worker/requirements.txt
+++ b/worker/requirements.txt
@@ -2,7 +2,7 @@ redis==5.0.1
 rq==1.15.1
 openai==1.10.0
 httpx==0.26.0
-neo4j==5.16.0
+neo4j>=5.26.0
 graphiti-core
 pydantic==2.6.0
 pydantic-settings==2.1.0
