--- a/backend/adapter/requirements.txt
+++ b/backend/adapter/requirements.txt
@@ -10,6 +10,6 @@ rq==1.15.1
 prometheus-client==0.19.0
 neo4j>=5.26.0
 graphiti-core
-openai==1.10.0
+openai>=1.38.0,<2.0.0
 pytest==7.4.4
 pytest-asyncio==0.23.4
