--- a/backend/adapter/requirements.txt
+++ b/backend/adapter/requirements.txt
@@ -1,6 +1,6 @@
-fastapi==0.109.0
+fastapi>=0.112.0,<0.113.0
 uvicorn[standard]==0.27.0
-pydantic==2.6.0
+pydantic>=2.8.2,<3.0.0
 pydantic-settings==2.1.0
 httpx==0.26.0
 python-multipart==0.0.6
