--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,8 @@
 app:
   project_name: graphiti-memory
   environment: development
-  base_url: http://localhost:8000
-  admin_frontend_url: http://localhost:3000
+  base_url: http://192.168.1.98:8000
+  admin_frontend_url: http://192.168.1.98:3000
 
 neo4j:
   uri: bolt://neo4j:7687
