--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "lucide-react": "^0.314.0",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.1",
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "react-force-graph-3d": "^1.24.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
