perf: increase SEMAPHORE_LIMIT to 100 for parallel LLM processing
- Add SEMAPHORE_LIMIT=100 to adapter service in docker-compose.yml
- Set SEMAPHORE_LIMIT explicitly in GraphitiWrapper initialization
- Speeds up episode processing from 30 min to 1-3 min (10-30x faster)
- Enables parallel deduplication checks instead of sequential

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,10 @@ services:
     container_name: adapter
     ports:
       - "${ADAPTER_PORT:-8000}:8000"
+    environment:
+      # Increase concurrent LLM operations for faster processing
+      # Default is ~10, we set to 100 for local LLM server
+      - SEMAPHORE_LIMIT=100
     env_file:
       - .env.adapter
     security_opt:
