--- a/.env.template
+++ b/.env.template
@@ -17,6 +17,11 @@ LLM_BASE_URL=https://api.openai.com/v1
 LLM_API_KEY=sk-LLM_KEY_HERE
 LLM_MODEL=gpt-4o-mini
 
+# Fast LLM (for simple operations: deduplication, validation)
+LLM_FAST_BASE_URL=https://api.openai.com/v1
+LLM_FAST_API_KEY=sk-LLM_KEY_HERE
+LLM_FAST_MODEL=qwen2.5:7b
+
 # Embeddings
 EMBEDDING_BASE_URL=https://api.openai.com/v1
 EMBEDDING_API_KEY=sk-EMBEDDING_KEY_HERE
