--- a/backend/adapter/requirements.txt
+++ b/backend/adapter/requirements.txt
@@ -9,7 +9,7 @@ redis==5.0.1
 rq==1.15.1
 prometheus-client==0.19.0
 neo4j>=5.26.0
-graphiti-core
+graphiti-core>=0.25.2,<0.26.0
 openai>=1.38.0,<2.0.0
 pytest==7.4.4
 pytest-asyncio==0.23.4
